# cpp-experiments-cmake-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  c++-experiments.code-workspace  gcovr.cfg
.github/workflows/: codeql.yml  safe-cplusplus-build.yml
apps/env_crashloop/: CMakeLists.txt  env_crashloop.cpp
apps/experiments/: CMakeLists.txt  main.cpp
cmake/: LTO.cmake  ccache.cmake  clang-tidy.cmake  compiler_warnings.cmake  coverage-cleanup.cmake  coverage.cmake  cppcheck.cmake  custom_init.cmake  custom_target.cmake  doxygen.cmake  flawfinder.cmake  sanitizer.cmake
config/: CMakeLists.txt  config.hpp.in
doxygen/: header.html
include/liba/: a.hpp
include/libb/: b.hpp
src/: CMakeLists.txt
src/liba/: CMakeLists.txt  lib.cpp
src/libb/: CMakeLists.txt  lib.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/bare_test/: CMakeLists.txt  bare_test.cpp
tests/catch2_a_test/: CMakeLists.txt  sum_tests.cpp
tests/catch2_b_test/: CMakeLists.txt  multiply_tests.cpp
